// This is the public API offered by your entity.
syntax = "proto3";

import "google/protobuf/empty.proto";
import "kalix/annotations.proto";
import "google/api/annotations.proto";
import "com/virtuslab/phototrip/place/api/place_api.proto";

package com.virtuslab.phototrip.worldmap.api;

message CreateWorldMap {
  string map_id = 1 [(kalix.field).entity_key = true];
  string creator_id = 2;
  string description = 3;
}

message GetWorldMap {
  string worldmap_id = 1 [(kalix.field).entity_key = true];
}

message CurrentWorldMap {
  string map_id = 1;
  string creator_id = 2;
  string description = 3;
}

service WorldMapService {
  option (kalix.codegen) = {
    value_entity: {
      name: "com.virtuslab.phototrip.worldmap.api.WorldMapValueEntity"
      entity_type: "worldmap"
      state: "com.virtuslab.phototrip.domain.WorldMap"
    }
  };
  option (kalix.service).acl.allow = { principal: ALL };

  rpc Create (CreateWorldMap) returns (google.protobuf.Empty);
  rpc Get (GetWorldMap) returns (CurrentWorldMap) {
    option (google.api.http) = {
      get: "/worldmaps/{worldmap_id}"
    };
  };
}
